Simplify architecture and code cleaning
